# godot-ipfs

./: Cargo.toml  Main.gd  Main.tscn  README.md  project.godot
.github/workflows/: Rust_CI.yml
addons/ipfs/: async_executor.gdns  custom_node.gdns  gdnative_lib.tres  ipfs.gdns  native_plugin.gdnlib  plugin.cfg  plugin.gd
src/: IPFS.rs  lib.rs
