[package]
name = "godot-ipfs"
version = "0.0.1"
authors = ["Samuel Onome Harrison"]
edition = "2021"
rust-version = "1.56"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.10", features = ["full"] }
gdnative = { version = "0.11"   }
ipfs-embed = {git = "https://github.com/Sam2much96/ipfs-embed", rev = "db72675"}

