[package]
name = "godot-ipfs"
version = "0.0.1"
authors = ["Samuel Onome Harrison"]
edition = "2021"
rust-version = "1.56"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.10", features = ["full"] }
futures = "0.3"
gdnative = { version = "0.11", features = ["async", ]  }
ipfs-embed = {git = "https://github.com/Sam2much96/ipfs-embed", rev = "db72675"}
libipld = {git = "https://github.com/ipld/libipld", rev = "65e0b38"}
