cargo-features = ["test-dummy-unstable"]


[package]
name = "godot-ipfs"
version = "0.0.1"
authors = ["Samuel Onome Harrison"]
edition = "2021"
rust-version = "1.56"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.10", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
gdnative = { version = "0.11", features = ["async"]  }
ipfs = {git = "https://github.com/rs-ipfs/rust-ipfs", rev = "eb8e935"}

